[package]
name = "python_heart_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_heart_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
rayon = "1.7.0"

[profile.release]
lto = "thin"
