[package]
name = "python_heart_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_heart_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.28.2"
rayon = "1.11.0"

[profile.release]
lto = "thin"
