[tool.poetry]
name = "python_heart_rust"
version = "0.0.1"
description = "Python Loves Rust!"
authors = ["TraceTronic GmbH <info@tracetronic.de>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
maturin = "^1.1.0"
pytest = "^7.2.2"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "python_heart_rust"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
profile = "release"
